modified:   index.html 	modified:   misc/_posts/2022-10-09-research.md

--- a/misc/_posts/2022-10-09-research.md
+++ b/misc/_posts/2022-10-09-research.md
@@ -7,32 +7,37 @@ title: Research
 
 Data science lab은 추천시스템과 지식진화의 연구그룹으로 구성됩니다.
 
+---
+
 ## Research groups
 
-### Knowledge evolution group
+### Recommendation system 
 
-The goal of our research is to combine artificial intelligence, the semantic web, and (stream-)database integration techniques to solve complex, fast-changing information integration problems. We leverage general research techniques across information-intensive disciplines, including smart energy, data integration and the social web.
+Recommendation systems are computer programs that provide personalized recommendations to users. They analyze users' past behavior to understand their preferences and interests, and then recommend various products, services, or content to them accordingly.
 
-We are pursuing a novel approach to blend Artificial intelligence and Machine Learning(AI/ML) with knowledge stream processing. Our work focuses on solving real-world problems over Knowledge Graph to bridge various kinds of promising applications, such as the real-time bibliographic databases, social media applications, energy management, urban planning, and so on
+* Recommendation algorithms: This is the core technology of recommendation systems. Researchers develop algorithms that analyze users' past behavior data to provide personalized recommendations.
 
-* Deep Inferences over Evolving Knowledge Graph
-  - Knowledge graph embeddings
-  - Graph neural networks
-  - Self-supervised learning
+* User experience: Researchers study user experience to improve the quality of recommendations. This includes factors such as transparency, diversity, and trustworthiness.
 
-* Incremental Reasoning for Evolving Knowledge Graph
-  - Measuring impacts of changes
-  - Optimization, and evaluation of stream reasoners
-  - Knowledge-based spatial-temporal graphs
-  - (Approximate) Stream reasoning
+* Use of recommendation systems: Researchers study how users interact with recommendation systems. For example, how recommendation systems may influence users' preferences or purchasing behavior.
 
-* Cutting-Edge Applications based on Evolving Knowledge Graph
-  - Smart city applications, Urban planning, Digital twins
-  - Smart-grid/Micro-grid, Energy management systems, Open electric vehicle charging applications
-  - Real-time systems for monitoring air pollution, e.g., TMS(Tele-Monitoring Systems)
-  - Knowledge tracing, Scholarly knowledge graph, bibliographic database
-  - Comparison and contrast of Massive online courses(or Massive online lectures)
-  - and etc.
+* Application areas: Recommendation systems are applied in various fields, such as music, movies, books, shopping, and travel. Researchers study how recommendation systems can be tailored to specific application areas.
+
+---
+
+### Knowledge evolution
+
+The topic of the knowledge evolution is to combine artificial intelligence, the semantic web, and (stream-)database integration techniques to solve complex, fast-changing information on the Web. We leverage general research techniques across information-intensive disciplines, including smart energy, data integration and the social web.
+
+* Knowledge representation learning: is a subfield of machine learning that focuses on learning high-quality, interpretable representations of knowledge from structured or unstructured data. These representations are typically in the form of graphs or embeddings that can be used for various tasks such as reasoning, prediction, or decision-making. The research areas in knowledge representation learning include:
+ - Graph neural networks: Developing deep learning models that can learn representations of graphs to perform various tasks such as node classification, link prediction, or graph classification.
+ - Knowledge graph completion: Learning to infer missing relationships between entities in a knowledge graph.
+
+* Stream reasoning: is a subfield of artificial intelligence that focuses on developing algorithms that can reason over data streams in real-time. It involves processing data as it arrives, making inferences, and updating beliefs in a continuous and online fashion. 
+- Incremental reasoning: Developing reasoning algorithms that can update their beliefs as new data arrives.
+- Online learning: Learning models that can adapt to changes in the data stream over time.
+- Temporal reasoning: Reasoning about temporal relationships between events in the data stream.
+- Uncertainty modeling: Modeling and quantifying uncertainty in the reasoning process.
 
 * Theoretical Foundation for Knowledge Representation and Reasoning(KR&R)
   - Graph-based models such as RDF/RDFS, Ontology, and Labeled Property Graph(LPG)
@@ -40,3 +45,9 @@ We are pursuing a novel approach to blend Artificial intelligence and Machine Le
   - Graph Query Languages such as Gremlin, Cypher, SPARQL
   - Theoretical investigation that surpasses Complex Event Processing(CEP) and Data Stream Management(DSMS)
   - Notions of knowledge stream reasoning
+
+* Application areas: 
+  - Smart-grid/Micro-grid, Energy management systems, Open electric vehicle charging applications
+  - Real-time systems for monitoring air pollution, e.g., TMS(Tele-Monitoring Systems)
+  - Knowledge tracing, Scholarly knowledge graph, bibliographic database
+  - Comparison and contrast of Massive online courses(or Massive online lectures)
