--- a/blog/_posts/2023-08-25-제3회 DevDay.md
+++ b/blog/_posts/2023-08-25-제3회 DevDay.md
@@ -1,37 +1,31 @@
 ---
 layout: post
-title: 2023년 동아대학교 컴퓨터AI공학부 제3회 프로그래밍 경진대회(DevDay) 대거 수상
-description: 2023 동아대학교 컴퓨터AI공학부 제3회 프로그래밍 경진대회(DevDay) 개발 트랙 및 아이디어 트랙에서 Data Science Lab 소속 학생 10명이 수상 쾌거
+title: DevDay 경진대회 2023  수상
+description: 동아대학교 컴퓨터AI공학부 주최, 2023년 DevDay 경진대회 소속학생 10명이 수상
 thumb: /images/blog/award-2023-09.jpg
 author: DSL-Media
 ---
 
 ### 수상소식 알림
 
-본 연구실의 많은 학생들이 2023 제3회 DevDay에서 대거 수상하는 쾌거를 이뤘습니다.   
+본 연구실의 학부 연구생들이 2023 제3회 DevDay 경진대회에서 대거 수상하는 쾌거를 이뤘습니다.   
 
 [수상자 명단]  
-김지선(3학년), 박동욱(3학년), 최범규(3학년), 손원석(3학년), 구지민(3학년), 백수민(3학년), 김예령(3학년)    
-김원아(2학년), 조수빈(2학년), 조성령(2학년)
+김지선, 박동욱, 최범규, 손원석, 구지민, 백수민, 김예령, 김원아, 조수빈, 조성령
 
 ### 세부 내용
 
 **탄소 발자국의 실시간 추적을 통해 캠퍼스 강의 시케쥴의 Net-Zero화를 위한 COCL(Carbon Optimized Course Load)** - 아이디어 기획 Track 대상  
-참여인원 : **백수민**, **김예령**, 임지은  
-발표자 : 김예령  
+참여인원 : 백수민, 김예령 
 
 **환자 응급도 기반 최적 병원 탐색을 위한 계층적 필터링**  - AI/SW개발 Track 최우수상  
-참여인원 : **조수빈**, 전상균(M4ML 2학년), 손수윤(CG Lab, 2학년), 이민준(2학년)  
-발표자 : 전상균  
+참여인원 : 조수빈
  
 **청년층 고용촉진을 위한 LLM 기반의 직무 추천 서비스** - AI/SW개발 Track 우수상  
 참여인원 : 구지민, 손원석, 박동욱, 김지선  
-발표자 : 구지민  
 
 **Concept Map 기반 온라인 학습 동영상 추천 시스템** - AI/SW개발 Track 장려상  
 참여인원 : 최범규, 김원아    
-발표자 : 최범규  
 
 **시계열 클러스터링 기반 가상발전소 만들기** - 아이디어 기획 - 장려상  
-참여인원 : **조성령**, 정영훈
-발표자 : 조성령
+참여인원 : 조성령
