학부생 CV, 연구 주제 업로드

--- a/team/_posts/2022-12-30-daero-kim.md
+++ b/team/_posts/2022-12-30-daero-kim.md
@@ -4,6 +4,9 @@ title: Daero Kim
 position: Undergraduate
 kname : 김대로
 github : dhfgoeofh
+cv : /pdfs/team/daero-kim-cv.pdf
+email : eofh4817@gmail.com
 ---
 
-TBD
+I'm an undergraduate at the Data Science Lab. 
+I studied location intelligence through a stochastic graphic model.
