--- a/team/_posts/2023-06-14-subin-cho.md
+++ b/team/_posts/2023-06-14-subin-cho.md
@@ -3,6 +3,11 @@ layout: member
 title: Subin Cho
 position: Undergraduate
 kname : 조수빈
+github: Jossubin
+cv: /pdfs/team/Subin-Cho-cv.pdf
+email: 8945sbjm@gmail.com
 ---
+I joined the Department of Computer Science at [Dong-A University](https://computer.donga.ac.kr/sites/computer/index.do) in March 2022. And in July 2023, [Data Science Research Lab](https://www.datasciencelabs.org/) conduct study on Clustering Algorithm through Data Analysis.
 
-TBD
+<div class="head">Research interests</div>
+<span class="badge badge-info">Knowledge graph inferences</span>
