--- a/team/_posts/2022-05-02-wonah-kim.md
+++ b/team/_posts/2022-05-02-wonah-kim.md
@@ -4,7 +4,7 @@ title: Wonah Kim
 position: Undergraduate
 github: Wona11
 kname : 김원아
-cv: /pdfs/team/Wonah_kim.pdf
+cv: /pdfs/team/Wonah-kim.pdf
 email : Wona11
 ---
 
