--- a/team/_posts/2022-12-30-daero-kim.md
+++ b/team/_posts/2022-12-30-daero-kim.md
@@ -7,6 +7,11 @@ github : dhfgoeofh
 cv : /pdfs/team/daero-kim-cv.pdf
 email : eofh4817@gmail.com
 ---
+I joined the Department of Computer Engineering at [Dong-A University](https://english.donga.ac.kr/sites/english/index.do) in March 2018. Since September 2022, I have been actively involved in the [Data Science Research Lab](https://www.datasciencelabs.org/), focusing on research related to site selection methodologies using data mining and graph networks. I'm currently working on a deep learning model scheduling system to reduce carbon emissions.
 
-I'm an undergraduate at the Data Science Lab. 
-I studied location intelligence through a stochastic graphic model.
+<div class="head">Research interests</div>
+<span class="badge badge-info">Graph Structure based Site Selection</span><span class="badge badge-danger">Site Recommendation</span>
+
+
+
+
