--- a/misc/_posts/2022-10-07-contact.md
+++ b/misc/_posts/2022-10-07-contact.md
@@ -5,7 +5,7 @@ title: Contact
 
 ## Address in Korean
 
-`교수연구실 S06-617(한정규), 625(천세진)`
+`교수연구실 S06-617(한정규), 615(천세진)`
 
 <address>
 	37 낙동대로, 550번길<br>
@@ -14,7 +14,8 @@ title: Contact
 </address>
 
 <p><br>
-실험실 관련 정보, 요청사항 및 궁금한 사항은 <b>jeongsu.int at gmail.com</b> 으로 이메일 연락주시기 바랍니다. 
+실험실 관련 정보, 요청사항 및 궁금한 사항은 <b><a href="mailto:sungbeomlee@donga.ac.kr">sungbeomlee@donga.ac.kr</a>
+</b> 으로 이메일 연락주시기 바랍니다. 
 </p>
 
 ## Address in English
@@ -29,7 +30,8 @@ title: Contact
 
 <p>
 <br>
-For media inquiries, please contact the data science lab communications team at <b>jeongsu.int at gmail.com</b>
+For media inquiries, please contact the data science lab communications team at <b><a href="mailto:sungbeomlee@donga.ac.kr">sungbeomlee@donga.ac.kr</a>
+</b>
 </p>
 
 ## Campus map
