--- a/misc/_posts/2022-10-08-join.md
+++ b/misc/_posts/2022-10-08-join.md
@@ -40,4 +40,5 @@ title: Join
 
 ## 연구실 지원 관련 문의
 
-상기 프로그램에 관심있는 학생은 천세진(sjchun at dau.ac.kr), 한정규(jkhan at dau.ac.kr)로 간단한 자기소개와 함께 이메일로 연락주시기 바랍니다.
+상기 프로그램에 관심있는 학생은 천세진(<a href="mailto:sjchun@dau.ac.kr">sjchun@dau.ac.kr</a>), 한정규(<a href="mailto:jkhan@dau.ac.kr">jkhan@dau.ac.kr</a>)로 간단한 자기소개와 함께 이메일로 연락주시기 바랍니다.
+
