--- a/blog/_posts/2023-09-1-대학현안해결-대학수업지원프로젝트.md
+++ b/blog/_posts/2023-09-1-대학현안해결-대학수업지원프로젝트.md
@@ -2,7 +2,7 @@
 layout: post
 title: 2023 지역현안해결 대학수업지원 프로젝트 선정
 description: 2023 지역현안해결 대학수업지원 프로젝트 선정
-thumb: 
+thumb: /images/blog/project-2023tp.jpg
 author: DSL-Media
 ---
 
