팀 명단 추가

--- a/team/_posts/2022-04-02-muyeon-jo.md
+++ b/team/_posts/2022-04-02-muyeon-jo.md
@@ -5,7 +5,9 @@ position: Master student
 github: muyeon-jo
 kname: 조무연
 image: /images/team/myjo.png
+cv: https://drive.google.com/file/d/1DsdiMu7C2f5pyfGSdZfknlOAH-CuebIc/view?usp=drive_link, MuyeonJo CV
+email: muyeonjo97@gmail.com
 ---
 
-
-TBD
+<div class="head">Research interests</div>
+<span class="badge badge-info">Recommender System</span><span class="badge badge-danger">POI Recommendation</span>
