--- a/misc/_posts/2022-10-09-research.md
+++ b/misc/_posts/2022-10-09-research.md
@@ -45,7 +45,7 @@ The topic of the knowledge evolution is to combine artificial intelligence, the 
   - Notions of knowledge stream reasoning
 
 * Application areas: 
-  - Smart-grid/Micro-grid, Energy management systems, Open electric vehicle charging applications
+  - Smart-grid/Micro-grid, Energy management systems, Virtual power plants, Electric vehicle charging applications
   - Real-time systems for monitoring air pollution, e.g., TMS(Tele-Monitoring Systems)
   - Knowledge tracing, Scholarly knowledge graph, bibliographic database
-  - Comparison and contrast of Massive online courses(or Massive online lectures)
+  - Carbon footprints measurements in AI
