--- a/misc/_posts/2022-10-09-research.md
+++ b/misc/_posts/2022-10-09-research.md
@@ -37,6 +37,12 @@ The topic of the knowledge evolution is to combine artificial intelligence, the 
   - Temporal reasoning: Reasoning about temporal relationships between events in the data stream.
   - Uncertainty modeling: Modeling and quantifying uncertainty in the reasoning process.
 
+* Carbon-Aware Computing: is a subfield of computing that focuses on reducing the environmental impact, particularly carbon emissions, of computing resources
+  - Energy Consumption Prediction and Management: Techniques for monitoring, predicting, and optimizing energy use in data centers and network systems.
+  - Environmental Impact of Cloud Computing and Virtualization: Analyzing the effects of cloud services and virtualization on energy consumption and carbon emissions.
+  - Energy-Aware Scheduling Algorithms: Developing algorithms for scheduling computing tasks in an energy-efficient manner.
+  - Carbon-Aware Migration: Dynamic migration in the geo-distributed cloud, according to availability of renewable energy sources 
+
 * Theoretical Foundation for Knowledge Representation and Reasoning(KR&R)
   - Graph-based models such as RDF/RDFS, Ontology, and Labeled Property Graph(LPG)
   - Logics such as  Description Logic, Description Logic, Metric Temporal Logic, and other logics
@@ -48,4 +54,4 @@ The topic of the knowledge evolution is to combine artificial intelligence, the 
   - Smart-grid/Micro-grid, Energy management systems, Virtual power plants, Electric vehicle charging applications
   - Real-time systems for monitoring air pollution, e.g., TMS(Tele-Monitoring Systems)
   - Knowledge tracing, Scholarly knowledge graph, bibliographic database
-  - Carbon footprints measurements in AI
+  - 
