--- a/blog/_posts/2023-12-20-ksc2023.md
+++ b/blog/_posts/2023-12-20-ksc2023.md
@@ -2,7 +2,7 @@
 layout: post
 title: KSC 2023 논문 발표
 description: 한국정보과학회 2023 한국소프트웨어종합학술대회 
-thumb: 
+thumb: /images/blog/ksc2023-12-20.jpg
 author: DSL-Media
 ---
 
