member changed blogs modified

--- a/blog/_posts/2023-12-20-지역현안해결.md
+++ b/blog/_posts/2023-12-20-지역현안해결.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2023 지역현안해결 프로젝트 우수상(부산 테크노파크 원장상) 수상
+title: 2023 부산 지역현안해결 수업지원 프로젝트 수상
 description: 넷제로 탄소(Net-Zero Carbon) 부산시를 만들기 위한 프로젝트를 수행
 thumb: /images/blog/2023-12-20-지역현안.jpg
 author: DSL-Media
