--- a/blog/_posts/2023-12-20-지산학우수사례.md
+++ b/blog/_posts/2023-12-20-지산학우수사례.md
@@ -9,8 +9,11 @@ author: DSL-Media
 ### 소식 알림
 2023 부산시 지산학 협력 우수사례로 저희 연구실에서 수행한 프로젝트가 선정되었습니다. 2023 부산시 지산학 협력은 '지산학, 상생이되다: 더 나은 사회를 향해 나란히 걷다'이라는 슬로건을 가지고 있습니다. 
 
+![1](/images/blog/2023-12-20-지산학-우수사례.png)
+지산학협력 우수사례 선정 내용
+
 ### 세부내용
 - 2023 지산학 우수사례로 선정된 3가지 세부 프로젝트는 다음과 같음.
-- 박정현, 김대로, 이성범: 오픈소스 기반 지역현안 문제해결 프로젝트, 고령친화도시
-- 최범규: 오픈소스 기반 지역현안 문제해결 프로젝트, 미디어믹스 메타데이터
-- 김원아, 김지선, 김정수: 공장 대기오염 모니터링 기술 개발
+- 공공데이터 기반 고령친화도시 만들기 
+- 오픈소스 기반 미디어믹스 메타데이터 생성하기
+- 공장 대기오염 모니터링 기술 개발
