--- a/team/_posts/2022-04-05-daero-kim.md
+++ b/team/_posts/2022-04-05-daero-kim.md
@@ -1,7 +1,7 @@
 ---
 layout: member
 title: Daero Kim
-position: Undergraduate
+position: Master student
 kname : 김대로
 github : dhfgoeofh
 cv : https://drive.google.com/file/d/1Xa1jTL_0TTIrigjqdP97c7G5jWdSt4fX/view?usp=sharing, DaeroKim CV
