--- a/team/_posts/2023-12-01-yewon-lee.md
+++ b/team/_posts/2023-12-01-yewon-lee.md
@@ -2,8 +2,13 @@
 layout: member
 title: Yewon Lee
 position: Undergraduate
+github: yewon0325
 kname : 이예원
+cv: https://drive.google.com/file/d/1rQqZqHrgsb3ZYXbz71E23R-BHdAbs8QV/view?usp=sharing, YewonLee CV
+email: 2243986@donga.ac.kr
 ---
 
+I entered the AI Department at [Dong-A University](https://english.donga.ac.kr/sites/english/index.do) in March 2022. It has been active since November 2023. [Data Science Lab](https://www.datasciencelabs.org/) is focusing on research on location selection methodology using data mining and graph networks.
+
 <div class="head">Research interests</div>
-<span class="badge badge-info">Knowledge graph inferences</span>
+<span class="badge badge-info">Graph Structure based Site Selection</span><span class="badge badge-danger">Site Recommendation</span>
