updates paper list

--- a/guide/_posts/2013-10-27-format.md
+++ b/guide/_posts/2013-10-27-format.md
@@ -34,6 +34,7 @@ journal: "BMC Biol 10: 38."
 pdf: /pdfs/papers/bedford-canalization.pdf
 supplement: /pdfs/papers/bedford-canalization-supp.pdf
 github: http://github.com/trvrb/canalization
+feature: KCI; SCIE; TOP-TIER; RESEARCH;
 ---
 ```
 
