--- a/guide/_posts/2013-10-27-format.md
+++ b/guide/_posts/2013-10-27-format.md
@@ -13,10 +13,11 @@ layout: post
 title: Some thoughts on a GitHub of Science
 author: Trevor Bedford
 image: /images/blog/github_large.png
+keywords: A, B, C, D
 ---
 ```
 
-Tags `layout`, `title` and `author` are required, while `image` is optional.  The author name should correspond to the team member `title` tag for proper linking of posts to authors.  All blog images should live in [`images/blog/`](https://github.com/blab/blotter/tree/master/images/blog) and be referred as relative to the base directory, begining with `/images/`.
+Tags `layout`, `title`, `keywords`, and `author` are required, while `image` is optional.  The author name should correspond to the team member `title` tag for proper linking of posts to authors.  All blog images should live in [`images/blog/`](https://github.com/blab/blotter/tree/master/images/blog) and be referred as relative to the base directory, begining with `/images/`.
 
 ## Papers
 
@@ -35,10 +36,11 @@ pdf: /pdfs/papers/bedford-canalization.pdf
 supplement: /pdfs/papers/bedford-canalization-supp.pdf
 github: http://github.com/trvrb/canalization
 feature: KCI; SCIE; TOP-TIER; RESEARCH;
+keywords: A, B, C, D
 ---
 ```
 
-Tags `layout`, `title`, `image`, `authors`, `year`, `ref`, `journal` are required.  Tags `pdf`, `supplement`, `github` are optional.  The image should be a 120x120 pixel tile.  All paper images and PDFs should reside in [`images/papers/`](https://github.com/blab/blotter/tree/master/images/papers) and [`pdfs/papers/`](https://github.com/blab/blotter/tree/master/pdfs/papers) respectively.
+Tags `layout`, `title`, `image`, `authors`, `year`, `ref`, `journal`, `keywords` are required.  Tags `pdf`, `supplement`, `github` are optional.  The image should be a 120x120 pixel tile.  All paper images and PDFs should reside in [`images/papers/`](https://github.com/blab/blotter/tree/master/images/papers) and [`pdfs/papers/`](https://github.com/blab/blotter/tree/master/pdfs/papers) respectively.
 
 ## Projects
 
