2024-07-11-CLOUD학회.md 업데이트

--- a/blog/_posts/2024-07-11-CLOUD학회.md
+++ b/blog/_posts/2024-07-11-CLOUD학회.md
@@ -5,7 +5,7 @@ description: IEEE CLOUD 2024
 thumb: /images/blog/2024-07-11-학회단체사진.jpg
 author: DSL-Media
 ---
-![CLOUD](/images/blog/2024-07-11-발표사진.jpg)  
+![CLOUD](/images/blog/2024-07-11-학회단체사진.jpg)  
 
 **발표자 김대로 석사과정**
 
