2024-07-11-CLOUD학회.md 업데이트

--- a/blog/_posts/2024-07-11-CLOUD학회.md
+++ b/blog/_posts/2024-07-11-CLOUD학회.md
@@ -7,7 +7,7 @@ author: DSL-Media
 ---
 ![CLOUD](/images/blog/2024-07-11-학회단체사진.jpg)  
 
-**발표자 김대로 석사과정**
+**왼쪽부터 김지선(4학년), 김대로, 박정현(석사과정), 천세진(지도교수)**
 
 ### 소식 알림
 
