--- a/blog/_posts/2024-07-11-CLOUD학회.md
+++ b/blog/_posts/2024-07-11-CLOUD학회.md
@@ -17,5 +17,5 @@ author: DSL-Media
 ### 세부 내용
 
 - 해당 연구는 클라우드의 딥러닝 워크로드에서 GPU 주파수 조절로 전력소비량 감소와 Carbon Intensity가 낮은 데이터센터로 워크로드를 이동시켜 탄소배출량을 획기적으로 감소시키는 방법임
-- 2024. 07. 07 ~ 13일 중국 선전(ShenZhen)에서 개최된 IEEE CLOUD 학회에 참가해서 석사과정 발표를 진행함
+- 2024-07-07 ~ 13일 중국 선전(ShenZhen)에서 개최된 IEEE CLOUD 학회에 참가해서 석사과정 발표를 진행함
 - 해당 학회에서 여러 우수 연구자들과 교류하고 Keynote 연사의 강의에 참여함
