--- a/blog/_posts/2024-07-11-CLOUD학회.md
+++ b/blog/_posts/2024-07-11-CLOUD학회.md
@@ -11,11 +11,10 @@ author: DSL-Media
 
 ### 소식 알림
 
-본 연구실의 석사과정 박정현, 김대로 학생과(공동 1저자) AI학과 4학년 김지선 학생이 작성한 논문이 IEEE International Conference on Cloud Computing (IEEE CLOUD) 정규 논문 트랙(Regular Full Paper Track) 에 게재 승인 되었습니다.  (accepted rate: 19.4%)
-
+본 연구실의 석사과정 박정현, 김대로 학생과(공동 1저자) 학부생 김지선 학생이 작성한 논문이 IEEE International Conference on Cloud Computing (IEEE CLOUD) 정규 논문 트랙(Regular Full Paper Track) 에 게재 승인 되었습니다.  (Acceptance rate: 19.4%)
 
 ### 세부 내용
 
 - 해당 연구는 클라우드의 딥러닝 워크로드에서 GPU 주파수 조절로 전력소비량 감소와 Carbon Intensity가 낮은 데이터센터로 워크로드를 이동시켜 탄소배출량을 획기적으로 감소시키는 방법임
-- 2024-07-07 ~ 13일 중국 선전(ShenZhen)에서 개최된 IEEE CLOUD 학회에 참가해서 석사과정 발표를 진행함
-- 해당 학회에서 여러 우수 연구자들과 교류하고 Keynote 연사의 강의에 참여함
+- 2024-07-07 ~ 13일 중국 선전(Shenzhen)에서 개최된 IEEE CLOUD 2024 학회에 참가하여 발표 진행 및 연구 교류를 수행함
+- 논문정보: ![LINK](https://www.datasciencelabs.org/papers/cloud2024-carbon-aware/)
