--- a/blog/_posts/2022-10-02-산통부BI.md
+++ b/blog/_posts/2022-10-02-산통부BI.md
@@ -19,7 +19,7 @@ author: DSL-Media
 
 ### 수상자 명단
 
-- 김지선, 김건한, 김정수 학생이 빅데이터분석 부분에서 대상(산업통상자원부 장관상)을 수상하였습니다. 해당 팀은 태양광 입지관련 정보종합 분석을 통해 태양광 설치 가능부지에 대한 정보를 제공하였습니다. 
+- 석사과정 김정수 학생 외 2명은 빅데이터분석 부분에서 대상(산업통상자원부 장관상)을 수상하였습니다. 해당 팀은 태양광 입지관련 정보종합 분석을 통해 태양광 설치 가능부지에 대한 정보를 제공하였습니다. 
 [빅데이터분야 수상내역 사이트 바로가기](https://datacontest.kr/board/view/97533073/3694)
 - 이해빈, 윤수빈, 김법기 학생이 아이디어기획 부분에서 최우수상(한국전력공사 사장상)을 수상하였습니다. 해당 팀은 전력데이터 보안강화를 위해 AI반도체에 탑재 가능한 이상치탐지 Advanced Metering Infrastructure(AMI) 모듈을 제안하였습니다.
 [아이디어기획분야 수상내역 사이트 바로가기](https://datacontest.kr/board/view/97533073/3692)
@@ -28,6 +28,5 @@ author: DSL-Media
 
 
 ### 관련 뉴스기사
-1. 동아대 학생들, ‘제10회 산업통상자원부 공공데이터 활용 BI 공모전’ 대거 수상, [동아대학교 홈페이지](http://www.donga.ac.kr/gzSub_001007001.aspx?NUM=720200)
-2. ‘제10회 산업통상자원부 공공데이터 활용 BI 공모전’ 대거 수상, [부산일보](https://www.busan.com/view/busan/view.php?code=2022100714293813714)
-3. 동아대 학생들, 공공데이터 활용 BI 공모전 휩쓸어, [대학저널](http://www.dhnews.co.kr/news/articleView.html?idxno=207910)
+1. ‘제10회 산업통상자원부 공공데이터 활용 BI 공모전’ 대거 수상, [부산일보](https://www.busan.com/view/busan/view.php?code=2022100714293813714)
+2. 동아대 학생들, 공공데이터 활용 BI 공모전 휩쓸어, [대학저널](http://www.dhnews.co.kr/news/articleView.html?idxno=207910)
