--- a/blog/_posts/2023-08-25-제3회 DevDay.md
+++ b/blog/_posts/2023-08-25-제3회 DevDay.md
@@ -8,10 +8,7 @@ author: DSL-Media
 
 ### 수상소식 알림
 
-본 연구실의 학부 연구생들이 2023 제3회 DevDay 경진대회에서 대거 수상하는 쾌거를 이뤘습니다.   
-
-[수상자 명단]  
-김지선, 박동욱, 최범규, 손원석, 구지민, 백수민, 김예령, 김원아, 조수빈, 조성령
+본 연구실의 학부 연구생들이 2023 제3회 DevDay 경진대회에서 대거 수상하는 쾌거를 이뤘습니다.     
 
 ### 세부 내용
 
@@ -22,10 +19,10 @@ author: DSL-Media
 참여인원 : 조수빈
  
 **청년층 고용촉진을 위한 LLM 기반의 직무 추천 서비스** - AI/SW개발 Track 우수상  
-참여인원 : 구지민, 손원석, 박동욱, 김지선  
+참여인원 : 구지민, 손원석 외 2명
 
 **Concept Map 기반 온라인 학습 동영상 추천 시스템** - AI/SW개발 Track 장려상  
-참여인원 : 최범규, 김원아    
+참여인원 : 김원아
 
 **시계열 클러스터링 기반 가상발전소 만들기** - 아이디어 기획 - 장려상  
 참여인원 : 조성령
