--- a/blog/_posts/2023-08-30-고용노동부-공모전 copy.md
+++ b/blog/_posts/2023-08-30-고용노동부-공모전 copy.md
@@ -19,5 +19,9 @@ author: DSL-Media
 *ELEI(Enterprise Living Environment Index): 기업 생활 환경 지수로MZ 세대가 선호하는 인프라 환경을 기반으로 해당 기업에 대한 평가를 진행합니다.
 
 
-솔루션에 대한 세부 소개는 다음 페이지를 참고하시면 됩니다.
-https://www.datasciencelabs.org/projects/Balance_Up/
+솔루션에 대한 세부 소개는 [여기](https://www.datasciencelabs.org/projects/Balance_Up/) 참고하시면 됩니다.
+
+### 관련 뉴스기사
+- [부산일보](https://www.busan.com/view/busan/view.php?code=2023091116070684585)
+- [대한경제](https://m.dnews.co.kr/m_home/view.jsp?idxno=202309111207092590200)
+- [국제신문](https://www.kookje.co.kr/news2011/asp/newsbody.asp?code=&key=20230911.99099002880)
