--- a/blog/_posts/2024-05-17-멀티미디어수상.md
+++ b/blog/_posts/2024-05-17-멀티미디어수상.md
@@ -5,8 +5,13 @@ description: 2024년 한국멀티미디어학회 춘계학술발표대회 포스
 thumb: /images/blog/2024-05-17-멀티미디어수상.jpg
 author: DSL-Media
 ---
-![멀티미디어](/images/blog/2024-05-17-멀티미디어수상.jpg)  
-**수상 학생(오른쪽), 박정현 석사과정(왼쪽).**
+
+<div  align='center'>
+<figure> 
+    <img src="{{ page.thumb }}" alt="멀티미디어" style="width:240px; height:360px;">
+    <figcaption align='center'> 수상 학생(오른쪽), 박정현 석사과정(왼쪽).</figcaption>
+</figure>
+</div>
 
 ### 수상소식 알림
 
