--- a/blog/_posts/2024-07-11-CLOUD학회.md
+++ b/blog/_posts/2024-07-11-CLOUD학회.md
@@ -2,16 +2,20 @@
 layout: post 
 title: IEEE International Conference on Cloud Computing (CLOUD) 논문 발표
 description: IEEE CLOUD 2024에서 "Carbon-Aware and Fault-Tolerant Migration of Deep Learning Workloads in the Geo-distributed Cloud" 논문 발표
-thumb: /images/blog/2024-07-11-학회단체사진.jpg
+thumb: /images/blog/2024-07-11-학회단체사진.png
 author: DSL-Media
 ---
-![CLOUD](/images/blog/2024-07-11-학회단체사진.jpg)  
 
-**왼쪽부터 김지선(4학년), 김대로, 박정현(석사과정), 천세진(지도교수)**
+<div  align='center'>
+<figure> 
+    <img src="{{ page.thumb }}" alt="IEEE CLOUD" style="width:293px; height:293px;">
+    <figcaption align='center'> 김대로, 박정현(석사과정), 천세진(지도교수)</figcaption>
+</figure>
+</div>
 
 ### 소식 알림
 
-본 연구실의 석사과정 박정현, 김대로 학생과(공동 1저자) 학부생 김지선 학생이 작성한 논문이 IEEE International Conference on Cloud Computing (IEEE CLOUD) 정규 논문 트랙(Regular Full Paper Track) 에 게재 승인 되었습니다.  (Acceptance rate: 19.4%)
+본 연구실의 석사과정 박정현, 김대로 학생과(공동 1저자) 작성한 (학부 1명참여) 논문이 IEEE International Conference on Cloud Computing (IEEE CLOUD) 정규 논문 트랙(Regular Full Paper Track) 에 게재 승인 되었습니다.  (Acceptance rate: 19.4%)
 
 ### 세부 내용
 
