--- a/blog/_posts/2023-12-20-지역현안해결.md
+++ b/blog/_posts/2023-12-20-지역현안해결.md
@@ -2,15 +2,11 @@
 layout: post
 title: 2023 부산 지역현안해결 수업지원 프로젝트 수상
 description: 넷제로 탄소(Net-Zero Carbon) 부산시를 만들기 위한 프로젝트를 수행
-thumb: /images/blog/2023-12-20-지역현안.jpg
 author: DSL-Media
 ---
 
 ### 소식 알림
-본 연구실의 학부연구생 **김지선, 김예령, 백수민, 이예원** 학생이 지역현안해결 대학수업지원 프로젝트에 참여하여 부산 테크노파크 원장상(우수상)을 수상하였습니다.  
-
-![1](/images/blog/2023-12-20-지역현안.jpg)  
-가운데 3명의 대표 여학생(김지선, 김예령, 백수민)
+본 연구실의 학부연구생 **김예령, 백수민, 이예원** 등 학생이 지역현안해결 대학수업지원 프로젝트에 참여하여 부산 테크노파크 원장상(우수상)을 수상하였습니다.  
 
 ### 세부내용
 - 넷제로 캠퍼스를 위한 AI 기반 요소기술 개발함.
