--- a/blog/_posts/2024-02-27-MT.md
+++ b/blog/_posts/2024-02-27-MT.md
@@ -2,15 +2,20 @@
 layout: post
 title: 2024 DSL 신년 MT 
 description: 2024년 DSL 송정 MT 진행 
-thumb: /images/blog/2024-02-27-MT1.jpg
+thumb: /images/blog/2024-02-27-MT1.png
 author: DSL-Media
 ---
 
-### 소식 알림
-**지도교수님들을 포함한 15명의 DSL 연구실 인원들** 이 2024 DSL 신년 MT에 참여하여 즐겁고 뜻깊은 하루를 보냈습니다. 
+<div  align='center'>
+<figure> 
+    <img src="{{ page.thumb }}" alt="MT" style="width:360px; height:360px;">
+    <figcaption align='center'></figcaption>
+</figure>
+</div>
 
-![1](/images/blog/2024-02-27-MT2.jpg) 
-**한정규(제일 왼쪽, 지도교수), 천세진(제일 오른쪽, 지도교수) 등 15명의 DSL 인원 참여**
+### 소식 알림
+**지도교수님들을 포함한 DSL 연구실 인원들** 이 2024 DSL 신년 MT에 참여하여 즐겁고 뜻깊은 하루를 보냈습니다. 
+
 
 ### 세부내용
 - 부산 송정 해수욕장에서 1박 2일의 MT를 진행함.
