--- a/blog/_posts/2024-05-17-멀티미디어학회.md
+++ b/blog/_posts/2024-05-17-멀티미디어학회.md
@@ -5,8 +5,13 @@ description: 2024년 한국멀티미디어학회 춘계학술발표대회에 참
 thumb: /images/blog/2024-05-17-멀티미디어학회.jpg
 author: DSL-Media
 ---
-![멀티미디어](/images/blog/2024-05-17-멀티미디어학회.jpg)  
-** 데이터사이언스 연구실 학생들, 천세진 교수(오른쪽에서 네 번째).**
+
+<div  align='center'>
+<figure> 
+    <img src="{{ page.thumb }}" alt="멀티미디어" style="width:240px; height:360px;">
+    <figcaption align='center'> 데이터사이언스 연구실 학생들, 천세진 교수(오른쪽에서 네 번째).</figcaption>
+</figure>
+</div>
 
 ### 소식 알림
 
@@ -15,7 +20,7 @@ author: DSL-Media
 ### 세부 내용
 
 
-숙명여자대학교 진리관에서 개최된 한국멀티미디어학회 춘계학술대회에 참가하였습니다. 이번 학술대회에서 본 연구실의 김지선, 손원석, 구해윤, 김재경 학생이 학부생 논문을 발표하며 주목을 받았다.
+숙명여자대학교 진리관에서 개최된 한국멀티미디어학회 춘계학술대회에 참가하였습니다. 이번 학술대회에서 본 연구실의 손원석, 구해윤, 김재경 등 학생들이 논문을 발표하며 주목을 받았다.
 발표한 논문의 제목은 다음과 같습니다.
 - 가상발전소 정산금을 최대화하기 위한 신뢰도 기반 최적화모델
 - 지식 그래프 임베딩을 활용한 LLM 기반 직업 추천 프레임워크
