--- a/blog/_posts/2024-09-21-부울경ICT-이노베이션-챌린지.md
+++ b/blog/_posts/2024-09-21-부울경ICT-이노베이션-챌린지.md
@@ -14,14 +14,13 @@ author: DSL-Media
 </div>
 
 ### 수상소식 알림
-본 연구실의 박정현, 손원석, 김원아 학생들이 2024 부울경 ICT 이노베이션 챌린지에서 한국정보통신진흥협회장상을 수상하였습니다.<br><br>
+본 연구실의 박정현, 손원석, 김원아 학생들이 2024 부울경 ICT 이노베이션 챌린지에서 한국정보통신진흥협회장상을 수상하였습니다.
 
 ### 세부 내용
 
-**참여인원** 박정현, 손원석, 김원아<br>
-**주최** 정보통신산업진흥원<br>
-참여인원은 '클라우드에서 거대 언어 모델을 대상으로 한 탄소 배출량 저감 솔루션'을 개발 및 제안하였습니다. 기술을 통해, 효과적인 가상발전소 운영을 향한 신뢰도 기반 발전량 예측 모듈을 사용한 실시간 가상발전소 예측 발전량 보정 시스템 구축합니다. AI 학습의 탄소 배출량을 효과적으로 모니터링하고 저감할 수 있는 독창적인 마이그레이션 기술을 통해 지속 가능한 환경 구축에 기여하고자 하였습니다. 이에 독창성 및 우수성을 인정받아 한국정보통신진흥협회장상을 수상하였습니다.
-<br><br>
+**참여인원** 박정현, 손원석, 김원아
+**주최** 정보통신산업진흥원
+'클라우드에서 거대 언어 모델을 대상으로 한 탄소 배출량 저감 솔루션'을 개발 및 제안하며 클라우드의 탄소 배출량을 효과적으로 모니터링하고 저감할 수 있는 마이그레이션 기술의 사업화 전략을 발표함.
 
-### 관련 뉴스기사
-- [작성중이라들었습니다](https://www.busan.com/view/busan/view.php?code=2023091116070684585)
+
+
