ICT 수상 기사 추가

--- a/blog/_posts/2024-09-20-제5회디지털신기술아이디어경진대회-수상.md
+++ b/blog/_posts/2024-09-20-제5회디지털신기술아이디어경진대회-수상.md
@@ -29,3 +29,4 @@ author: DSL-Media
 **주최** 정보통신산업진흥원  
 '고령자 디지털 문해력을 향상하기 위한 유튜브 강의영상 기반 학습 관리 플랫폼'을 개발 및 제안해 지식그래프와 추천 AI를 활용한 고령층만을 위한 학습 추천 시스템의 우수함을 인정받아 최우수상을 수상하였습니다.
 
+- [동아뉴스-동아대 컴퓨터·AI공학부 학생들, 정보통신산업진흥원 주최 공모전 대거 수상 활약](https://donga.ac.kr/kor/CMS/Board/Board.do?mCode=MN044&mode=view&mgr_seq=54&board_seq=8377161)
