--- a/blog/_posts/2024-09-21-부울경ICT-이노베이션-챌린지.md
+++ b/blog/_posts/2024-09-21-부울경ICT-이노베이션-챌린지.md
@@ -24,3 +24,4 @@ author: DSL-Media
 
 
 
+- [동아뉴스-동아대 컴퓨터·AI공학부 학생들, 정보통신산업진흥원 주최 공모전 대거 수상 활약](https://donga.ac.kr/kor/CMS/Board/Board.do?mCode=MN044&mode=view&mgr_seq=54&board_seq=8377161)
