update member and papers add acheivement

--- a/misc/_posts/2022-10-09-research.md
+++ b/misc/_posts/2022-10-09-research.md
@@ -5,7 +5,7 @@ title: Research
 
 ## The goal of our research
 
-Data science lab은 추천시스템과 지식진화의 연구그룹으로 구성됩니다.
+Data science lab.은 추천시스템과 지식진화의 연구그룹으로 구성됩니다.
 
 ---
 
@@ -50,8 +50,15 @@ The topic of the knowledge evolution is to combine artificial intelligence, the 
   - Theoretical investigation that surpasses Complex Event Processing(CEP) and Data Stream Management(DSMS)
   - Notions of knowledge stream reasoning
 
-* Application areas: 
-  - Smart-grid/Micro-grid, Energy management systems, Virtual power plants, Electric vehicle charging applications
-  - Real-time systems for monitoring air pollution, e.g., TMS(Tele-Monitoring Systems)
-  - Knowledge tracing, Scholarly knowledge graph, bibliographic database
-  - 
+
+### Application areas
+We are expanding existing application domains to include *knowledge*-driven management and optimization systems in diverse fields:
+1. Smart Grid and Energy Management Systems
+  - Smart grids, microgrids, energy management systems, virtual power plants, electric vehicle charging applications
+2. Manufacturing and Quality Control
+  - 3D coordinate measuring machine data, manufacturing
+3. Real-Time Environmental Monitoring
+  - Real-time systems for air pollution monitoring, e.g., TMS (Tele-Monitoring Systems)
+  - Digital carbon emission monitoring, carbon-intelligent workload migration
+4. Knowledge Tracing and Scholarly Database Management
+  - Knowledge tracing, scholarly knowledge graph, bibliographic database
