--- a/team/_posts/2023-12-01-yewon-lee.md
+++ b/team/_posts/2023-12-01-yewon-lee.md
@@ -11,4 +11,4 @@ email: 2243986@donga.ac.kr
 I entered the AI Department at [Dong-A University](https://english.donga.ac.kr/sites/english/index.do) in March 2022. It has been active since November 2023. [Data Science Lab](https://www.datasciencelabs.org/) is focusing on research on location selection methodology using data mining and graph networks.
 
 <div class="head">Research interests</div>
-<span class="badge badge-info">Graph Structure based Site Selection</span><span class="badge badge-danger">Site Recommendation</span>
+<span class="badge badge-info">Knowledge Graph Modeling</span><span class="badge badge-danger">Ontology Development</span>
