중복제거, img_src update

--- a/blog/_posts/2024-11-27-datory-수상.md
+++ b/blog/_posts/2024-11-27-datory-수상.md
@@ -2,7 +2,7 @@
 layout: post
 title: "2024년 데이터오픈랩 활용 Datory Lab 최종발표회"
 description: "GIS기반 고령친화도시 부산을 위한 어르신 놀이터 적정입지 선정 대시보드를 주제로 전국단위 공모전에서 2등상 수상"
-thumb: /images/kok1-2024-11.jpg
+thumb: /images/blog/datory1-2024-11.jpg
 author: DSL-Media
 ---
 
