Update and rename 2022-12-30-jimin-koo.md to 9999-12-30-jimin-koo.md

--- a/team/_posts/9999-12-30-jimin-koo.md
+++ b/team/_posts/9999-12-30-jimin-koo.md
@@ -6,6 +6,7 @@ github: jmango61
 kname : 구해윤
 cv : https://drive.google.com/file/d/1QPkutPE8nsmb6aTKnl_Rwcb9dvUP_C12/view?usp=sharing, Haeyoon Koo CV
 email : greenify_88@donga.ac.kr
+alumni: true
 ---
 
 I joined the Department of New Material Engineering at [Dong-A University](https://english.donga.ac.kr/sites/english/index.do) in March 2021, and changed one's major to the Department of Computer Engineering in March 2022. And since October 2022, [Data Science Lab](https://www.datasciencelabs.org/) is conducting ontology and job recommendation studies. From March 2023, additional research on the job recommendation system based on resumes is conducting.
