Update undergraduate profile image

--- a/team/_posts/2022-05-02-wonah-kim.md
+++ b/team/_posts/2022-05-02-wonah-kim.md
@@ -6,6 +6,7 @@ github: Wona11
 kname : 김원아
 cv: https://drive.google.com/file/d/1NDH9itGTh60sYj8JytQPR2VCLtQuQlD_/view?usp=drivesdk, Wonah Kim CV
 email : Wona11
+image: /images/team/김원아_프로필.png
 ---
 
 
