--- a/team/_posts/2023-12-01-yewon-lee.md
+++ b/team/_posts/2023-12-01-yewon-lee.md
@@ -6,6 +6,7 @@ github: yewon0325
 kname : 이예원
 cv: https://drive.google.com/file/d/16m5bOpDweOfoVx7RgIj29yIDuxoGDnPv/view?usp=drive_link, YewonLee CV
 email: 2243986@donga.ac.kr
+image: /images/team/이예원_프로필.png
 ---
 
 I entered the AI Department at [Dong-A University](https://english.donga.ac.kr/sites/english/index.do) in March 2022. It has been active since November 2023. [Data Science Lab](https://www.datasciencelabs.org/) is focusing on research on location selection methodology using data mining and graph networks.
