--- a/papers/_posts/2024-11-27-kmms2024-fall-RAG.md
+++ b/papers/_posts/2024-11-27-kmms2024-fall-RAG.md
@@ -4,6 +4,7 @@ ptype: domconf
 group: knowevo
 title: "뉴스 요약을 위한 검색 증강 생성 기반 질의 중심 접근법"
 authors: Jihyeon Kim, Yewon Lee, Kakyeom Lim, Sungbeom Lee, Sejin Chun
+kauthors: ["김지현", "이예원", "임가겸", "이성범", "천세진"]
 year: 2024
 ref: 한국멀티미디어학회 추계학술발표대회 2024.
 journal: "2024 한국멀티미디어학회 추계학술발표대회"
