--- a/misc/_posts/2022-10-09-research.md
+++ b/misc/_posts/2022-10-09-research.md
@@ -27,38 +27,51 @@ Recommendation systems are computer programs that provide personalized recommend
 
 The topic of the knowledge evolution is to combine artificial intelligence, the semantic web, and (stream-)database integration techniques to solve complex, fast-changing information on the Web. We leverage general research techniques across information-intensive disciplines, including smart energy, data integration and the social web.
 
-* Knowledge representation learning: is a subfield of machine learning that focuses on learning high-quality, interpretable representations of knowledge from structured or unstructured data. These representations are typically in the form of graphs or embeddings that can be used for various tasks such as reasoning, prediction, or decision-making. The research areas in knowledge representation learning include:
-  - Graph neural networks: Developing deep learning models that can learn representations of graphs to perform various tasks such as node classification, link prediction, or graph classification.
-  - Knowledge graph completion: Learning to infer missing relationships between entities in a knowledge graph.
+🌿 Sustainable Web
+  - Energy-Efficient Web Design and Frontend Optimization
+  - Carbon-Aware Web Workload Scheduling
+  - Lifecycle Sustainability Analytics and User Engagement
 
-* Stream reasoning: is a subfield of artificial intelligence that focuses on developing algorithms that can reason over data streams in real-time. It involves processing data as it arrives, making inferences, and updating beliefs in a continuous and online fashion. 
-  - Incremental reasoning: Developing reasoning algorithms that can update their beliefs as new data arrives.
-  - Online learning: Learning models that can adapt to changes in the data stream over time.
-  - Temporal reasoning: Reasoning about temporal relationships between events in the data stream.
-  - Uncertainty modeling: Modeling and quantifying uncertainty in the reasoning process.
+🧠 Multi-modal Knowledge Graph Reasoning
+  - Automated construction of multimodal knowledge graphs integrating text, images, and sensor data
+  - Designing Graph Neural Networks for reasoning over multimodal KGs
+  - Event reasoning and explainability using KGs
+  - Semantic Table Annotation for KG Enrichment
+  - Anomaly Detection using Multimodal KGs
 
-* Carbon-Aware Computing: is a subfield of computing that focuses on reducing the environmental impact, particularly carbon emissions, of computing resources
-  - Energy Consumption Prediction and Management: Techniques for monitoring, predicting, and optimizing energy use in data centers and network systems.
-  - Environmental Impact of Cloud Computing and Virtualization: Analyzing the effects of cloud services and virtualization on energy consumption and carbon emissions.
-  - Energy-Aware Scheduling Algorithms: Developing algorithms for scheduling computing tasks in an energy-efficient manner.
-  - Carbon-Aware Migration: Dynamic migration in the geo-distributed cloud, according to availability of renewable energy sources 
-
-* Theoretical Foundation for Knowledge Representation and Reasoning(KR&R)
-  - Graph-based models such as RDF/RDFS, Ontology, and Labeled Property Graph(LPG)
-  - Logics such as  Description Logic, Description Logic, Metric Temporal Logic, and other logics
-  - Graph Query Languages such as Gremlin, Cypher, SPARQL
-  - Theoretical investigation that surpasses Complex Event Processing(CEP) and Data Stream Management(DSMS)
-  - Notions of knowledge stream reasoning
+⚡ Carbon-aware Computing
+  - Cloud workload scheduling algorithms based on carbon emission predictions
+  - VM placement optimization using power mix and time-dependent carbon intensity
+  - Edge-cloud collaborative environments for carbon-performance trade-off optimization
+  - Real-time monitoring and reduction techniques for carbon footprints during AI model training and inference
 
 
 ### Application areas
 We are expanding existing application domains to include *knowledge*-driven management and optimization systems in diverse fields:
 1. Smart Grid and Energy Management Systems
-  - Smart grids, microgrids, energy management systems, virtual power plants, electric vehicle charging applications
+- Smart grids, microgrids, energy management systems
+- Virtual power plants, electric vehicle charging optimization
+- Digital twin of energy infrastructure for predictive control
+- Carbon-intelligent workload migration and scheduling
+
 2. Manufacturing and Quality Control
-  - 3D coordinate measuring machine data, manufacturing
+- 3D coordinate measuring machine data analysis for precision inspection
+- Manufacturing process monitoring and optimization
+- Digital twin integration for shop-floor visualization and predictive maintenance
+- Anomaly detection in manufacturing robots and processes
+
 3. Real-Time Environmental Monitoring
-  - Real-time systems for air pollution monitoring, e.g., TMS (Tele-Monitoring Systems)
-  - Digital carbon emission monitoring, carbon-intelligent workload migration
-4. Knowledge Tracing and Scholarly Database Management
-  - Knowledge tracing, scholarly knowledge graph, bibliographic database
+- Real-time air pollution and emission monitoring (e.g., TMS systems)
+- Digital carbon emission tracking and reporting
+- Light pollution monitoring and analysis using multimodal data
+- Environmental digital twins for urban sustainability management
+
+4. Knowledge Tracing
+- Learner modeling and knowledge tracing using multimodal data
+- Microlearning module design and short-form educational video personalization
+
+5. Digital Twin-enhanced Robotics and Automation
+- Integration of manufacturing robots with digital twins for real-time monitoring
+- Robot-assisted microlearning environments for skill training
+- Anomaly detection in robot operations using multimodal sensor data
+- Energy-efficient robot scheduling and workload optimization using carbon-aware computing
